--- a/.github/workflows/update_docker.yml
+++ b/.github/workflows/update_docker.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
 
       - name: Checkout Armbian Framework
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4
         with:
           repository: armbian/build
           ref:  main
@@ -32,14 +32,15 @@ jobs:
           # Make a list of valid pairs from our config
           echo 'JSON_CONTENT<<EOF' >> $GITHUB_OUTPUT
           
-          # cycle supported distributions and skip exotics
-          releases=($(grep -rw config/distributions/*/support -ve 'eos' | cut -d"/" -f3 | grep -Ev "focal|buster|kinetic|bullseye|sid|trixie"))
+          # cycle non eos distributions and skip exotics
+          releases=($(grep -rw config/distributions/*/support -ve 'eos' | cut -d"/" -f3 | grep -Ev "bullseye|mantic|sid|trixie"))
           
           # extract release name from the distribution
           for i in ${releases[@]}; do
               echo "{\"os\":\"$(cat config/distributions/${i}/name | cut -d" " -f1 | sed -e 's/\(.*\)/\L\1/')\",\"release\":\"${i}\"}"
               done | jq -s >> $GITHUB_OUTPUT
-          echo 'EOF' >> $GITHUB_OUTPUT          
+          echo 'EOF' >> $GITHUB_OUTPUT
+
   Docker:
 
     runs-on: ubuntu-latest
@@ -57,33 +58,33 @@ jobs:
     steps:
 
       - name: Checkout Armbian Framework
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4
         with:
           repository: armbian/build
           ref:  main
           fetch-depth: 1
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         id: buildx_1
         continue-on-error: true # this process is prone to failure, lets repeat it again if fails
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Set up Docker Buildx
         id: buildx_2
         if: steps.buildx.outcome == 'failure'
         continue-on-error: true # this process is prone to failure, lets repeat it again if fails
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Set up Docker Buildx 
         id: buildx_3
         if: steps.buildx.outcome == 'failure'
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Docker Login to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }} # github username or org
@@ -102,7 +103,7 @@ jobs:
           bash ./compile.sh generate-dockerfile
       - name: Build and push ${{env.DOCKERFILE_OS}}:${{env.DOCKERFILE_RELEASE}}
         id: docker_build
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
@@ -125,6 +126,12 @@ jobs:
     name: Keep Alive
     needs: Docker
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      actions: write
+      packages: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: gautamkrishnar/keepalive-workflow@v1 
+      - uses: actions/checkout@v4
+      - uses: gautamkrishnar/keepalive-workflow@v2
+        with:
+          use_api: true
